--- a/step1/deployment.yml
+++ b/step1/deployment.yml
@@ -23,4 +23,4 @@ spec:
               containerPort: 5000
           env:
             - name: ENDPOINT
-              value: localhost
+              value: "http://fibo-service:80"
