--- a/step2/templates/fibo-ingress.yaml
+++ b/step2/templates/fibo-ingress.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.fibo.ingress.enabled true }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -6,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - http:
+    - host: {{ .Values.fibo.ingress.host }}
+      http:
         paths:
           - path: /
             pathType: Prefix
@@ -15,3 +17,4 @@ spec:
                 name: fibo-service
                 port:
                   number: 80
+{{ end }}
