--- a/step2/values.yaml
+++ b/step2/values.yaml
@@ -1,5 +1,8 @@
 fibo:
-  replicaCount: 1
+  replicaCount: 3
   image:
     name: zarakailloux/fibo
     tag: 1.5.2
+  ingress:
+    enabled: true
+    host: localhost
